Upgraded to Spring Security 5, Hazelcast 4, Spring Boot 2.5